# labelizer-back

./: .env  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Makefile  README.md  TODOs.md  alembic.ini  database.csv  development.md  environment.yml  main.py  pyproject.toml  ruff.toml  stage-maccou - Raccourci.lnk
alembic/: env.py
alembic/versions/: 4546be8bf419_change_labeled_triplets_to_triplets_only.py  535b046814a0_change_typo_triplets_in_place_of_.py  dd748f0911c9_initial_migration.py
app/: main.py  models.py  schemas.py
backend/: utils.py
backend/config/: app_config.py  config.py  routes.py
backend/images_utils/: routes.py
backend/items/: crud.py  models.py  utils.py
backend/similarity/: flows.py  routes.py
backend/triplets/: crud.py  enums.py  flows.py  models.py  routes.py  schemas.py  utils.py
backend/upload/: crud.py  flows.py  models.py  routes.py  schemas.py
data_example/: README.md
data_example/base_data/: triplets.csv  validation_triplets.csv
database/: README.md  crud.py  init_database.py  init_db.py  models.py  schemas.py
docker/: .env  Dockerfile  docker-compose.yml
docker/initdb_scripts/: 0_create_db.sql  1_create_schemas.sh
labelizer/: app_config.py  crud.py  in_memory_db.py  model.py  models.py  routes.py  schemas.py  seed_data.py  types.py  utils.py
labelizer/config/: app_config.py  routes.py
labelizer/items/: crud.py  (+3 more)
references/: interface.md
src/: utils.py
test_data/: README.md
tests/: README.md  conftest.py  database.py  seed_data.py  test_crud.py  test_data.py  test_db.py  test_routes.py
(+70 files in other folders)
