[tool.poetry]
name = "labelizer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.30"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pytest = "^8.2.0"
datetime = "^5.5"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
